--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 慢慢来，比较快
+title: Haste makes waste
 email: xschenzhezhtx@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   好玩的东西
