--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Haste makes waste
 email: xschenzhezhtx@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  好玩的东西
+  Less is more.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  KaelChen
